# discord_bot

./: .env.default  .gitignore  bot.py  db_manager.py  pyproject.toml  run-db-manager.sh  run-server.sh  run.sh
fe/: package-lock.json  package.json  tsconfig.json
fe/src/: App.tsx
fe/src/components/: ImageUpload.tsx
src/: dependencies.py  uow.py
src/app/dto/: user_dto.py
src/app/present/bot/: chat_cog.py  file_cog.py  help_cog.py  user_cog.py  vote_cog.py
src/app/usecase/: auth_usecase.py  chat_usecase.py  file_usecase.py  user_usecase.py
src/domain/: model.py  repository.py
src/infra/: db.py  encryption.py  env.py  gpt.py  object_storage.py
tests/: test_minio.py
