[tool.poetry]
name = "kyb-discord-bot"
version = "0.1.0"
description = ""
authors = ["Kwon Young Bok <kybdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
openai = "^1.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
